# api.clientes

./: pyproject.toml  requirements.txt
clientes/: forms.py  models.py  serializers.py  urls.py  validators.py  views.py
clientes/migrations/: 0004_alter_cliente_ativo.py
clientes/templates/clientes/: cadastrar_cliente.html  listar_clientes.html  sucesso.html
setup/: settings.py  urls.py
